--- a/Federated_Proxy.html
+++ b/Federated_Proxy.html
@@ -9,7 +9,9 @@
 <form>
 	<label style="font-size:400%;"><b>.gov search</b></label><br><br>
 	<label for="website" style="font-size:150%;color:grey;"><b>Find backups of any .gov website</label></b><br><br>
-	<input type="text" id="website" name="website">
+	<input type="text" id="website" name="website" size="40"><br><br>
+	<label for="date" style="font-size:150%;color:grey;">Enter website date approximation <br> (Optional)</label><br>
+	<input type="date" id="date" name="date">
 	<input type="submit" value="Search">
 </form>
 </body>
