--- a/index.html
+++ b/index.html
@@ -3,17 +3,20 @@
 <head>
 <title>Federated Website</title>
 </head>
-<body style="text-align:center;">
-<br>
-<br>
-<br>
-<form>
-	<label style="font-size:400%;"><b>.gov search</b></label><br><br>
-	<label for="website" style="font-size:150%;color:grey;"><b>Find backups of any .gov website</label></b><br><br>
-	<input type="text" id="website" name="website" size="40"><br><br>
-	<label for="date" style="font-size:150%;color:grey;">Enter website date approximation <br> (Optional)</label><br>
-	<input type="date" id="date" name="date">
-	<input type="submit" value="Search">
-</form>
-</body>
+
+<div id="Home">
+	<body style="text-align:center;">
+	<br>
+	<br>
+	<br>
+	<form>
+		<label style="font-size:400%;"><b>.gov search</b></label><br><br>
+		<label for="website" style="font-size:150%;color:grey;"><b>Find backups of any .gov website</label></b><br><br>
+		<input type="text" id="website" name="website" size="40" title="website.gov"><br><br>
+		<input type="date" id="date" name="date" title="Enter an approximate date (Optional)">
+		<input type="submit" value="Search">
+	</form>
+	</body>
+</div>
+
 </html>
