pull values from html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<input type="text" id="website" name="website" size="40"><br><br>
 	<label for="date" style="font-size:150%;color:grey;">Enter website date approximation <br> (Optional)</label><br>
 	<input type="date" id="date" name="date">
-	<input type="submit" value="Search">
+	<input type="submit" id="submit" value="Search" onclick="search()">
 </form>
 </body>
 </html>
