--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Federated Website</title>
+  <script src="redirect.js"></script>
+  <title>Federated Website</title>
 </head>
 <body style="text-align:center;">
 <br>
