--- a/index.html
+++ b/index.html
@@ -1,19 +1,40 @@
-<!DOCTYPE HTML>
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-<title>Federated Website</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Federated Website</title>
+	<link rel="stylesheet" href="style.css">
 </head>
-<body style="text-align:center;">
-<br>
-<br>
-<br>
-<form>
-	<label style="font-size:400%;"><b>.gov search</b></label><br><br>
-	<label for="website" style="font-size:150%;color:grey;"><b>Find backups of any .gov website</label></b><br><br>
-	<input type="text" id="website" name="website" size="40"><br><br>
-	<label for="date" style="font-size:150%;color:grey;">Enter website date approximation <br> (Optional)</label><br>
-	<input type="date" id="date" name="date">
-	<input type="submit" value="Search">
-</form>
+
+<body class="bg-white">
+	<div class="min-h-screen flex items-center justify-center">
+		<form class="max-w-2xl mx-auto text-center">
+			<div class="mb-10">
+				<h1 class="text-7xl font-bold text-gray-900 mb-4">
+					.gov search
+				</h1>
+				<p class="text-2xl text-gray-600">
+					Find backups of any .gov website
+				</p>
+			</div>
+
+			<div class="space-y-4">
+				<input type="text" id="website" name="website"
+					class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none"
+					placeholder="Enter website URL">
+
+				<div class="flex items-center justify-center gap-4">
+					<input type="date" id="date" name="date" class="px-14 py-2 border border-gray-300 rounded-lg">
+					<button type="submit"
+						class="px-8 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition-colors">
+						Search
+					</button>
+				</div>
+			</div>
+		</form>
+	</div>
 </body>
+
 </html>
