--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 
+<!-- LOOK AT THE SLACK ASAP -->
+
 <body class="bg-white">
 	<div class="min-h-screen flex items-center justify-center">
 		<form class="max-w-2xl mx-auto text-center">
