remove date parsing

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					placeholder="Enter website URL">
 
 				<div class="flex items-center justify-center gap-4">
-					<input type="date" id="date" name="date" class="px-14 py-2 border border-gray-300 rounded-lg">
+					<!-- <input type="date" id="date" name="date" class="px-14 py-2 border border-gray-300 rounded-lg"> -->
 					<button type="submit" id="submit" value="Search" onclick="search()"
 						class="px-8 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition-colors">
 						Search
