commit again since I forgot to add

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script src="redirect.js"></script>
 	<title>Federated Website</title>
 	<link rel="stylesheet" href="style.css">
 </head>
@@ -28,7 +27,7 @@
 
 				<div class="flex items-center justify-center gap-4">
 					<input type="date" id="date" name="date" class="px-14 py-2 border border-gray-300 rounded-lg">
-					<button type="submit" id="submit" value="Search" onclick="search()"
+					<button type="submit" id="submit" value="Search"
 						class="px-8 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition-colors">
 						Search
 					</button>
@@ -37,5 +36,7 @@
 		</form>
 	</div>
 </body>
+
+<script src="redirect.js"></script>
 
 </html>
